gccida/c1/pedwarn
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/pedwarn/src/diagnostic.c:1456:1: error: unknown type name 'diagnostic_context_0'; did you mean 'diagnostic_context'?
diagnostic_context_0 v2; // [rsp+D8h] [rbp-180h] BYREF 
^~~~~~~~~~~~~~~~~~~~
diagnostic_context
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/pedwarn/src/diagnostic.h:29:35: note: 'diagnostic_context' declared here
typedef struct diagnostic_context diagnostic_context;
                                  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/pedwarn/src/diagnostic.c:1459:50: error: expected expression
set_diagnostic_context( &v2, msgid, ( va_list_0 *)va, input_filename, lineno, flag_pedantic_errors == 0); 
                                                 ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/pedwarn/src/diagnostic.c:1459:39: error: use of undeclared identifier 'va_list_0'
set_diagnostic_context( &v2, msgid, ( va_list_0 *)va, input_filename, lineno, flag_pedantic_errors == 0); 
                                      ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/pedwarn/src/obj/diagnostic.o] Error 1
